# rs-prompt

./: .gitignore  CODEX.md  Cargo.toml  Justfile  README.md
scripts/: init.bash  init.fish  init.zsh
src/: ansi.rs  host.rs  main.rs  path.rs  prompt.rs  prompt_escape.rs  test_support.rs  vcs.rs  venv.rs
tests/: pyproject.toml  test_rs_prompt.py
